--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/styled-jsx": "latest",
-    "typescript": "latest"
+    "stats-webpack-plugin": "^0.7.0",
+    "typescript": "latest",
+    "webpack": "^4.33.0",
+    "webpack-stats-plugin": "^0.2.1"
   }
 }
