--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "4.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/styles": "latest",
-    "@zeit/next-typescript": "latest",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/styles": "^4.1.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^8.1.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "scripts": {
     "dev": "next",
@@ -20,6 +20,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/styled-jsx": "latest",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
     "typescript": "latest",
     "webpack": "^4.33.0",
