--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/styled-jsx": "latest",
+    "awesome-typescript-loader": "^5.2.1",
+    "path": "^0.12.7",
     "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
     "typescript": "latest",
     "webpack": "^4.33.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-stats-plugin": "^0.2.1"
   }
 }
