--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "baseUrl": "src",
+    "paths": {
+       "src/*": ["./*"],
+       "app/*": ["./app/*"],
+    }
   }
 }
