--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "@types/styled-jsx": "latest",
     "awesome-typescript-loader": "^5.2.1",
     "path": "^0.12.7",
-    "speed-measure-webpack-plugin": "^1.3.1",
     "stats-webpack-plugin": "^0.7.0",
-    "typescript": "latest",
+    "typescript": "^3.5.2",
     "webpack": "^4.33.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-stats-plugin": "^0.2.1"
